# rhyme_rus

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  Project_architecture.mmd  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  rhyme.sqlite3
rhyme_rus/: .gitattributes  .~lock.mult_one_processor.ods#  .~lock.time_table_random.ods#  .~lock.time_table_stable.ods#  comparison_mult_vs_one.py  cprofile.py  draft_multi_process.py  draft_pool_process.py  jit_compare.py  measure_time.py  multi_process.py  multiprocessing.py  numba_draft.py  pool_process.py  rhyme.py  rhyme_profile.stats  rhyme_profile_2.stats  rhyme_profile_after.stats  rhyme_profile_sqlite.stats
tests/: .coveragerc  stressed_word.py  test_all_stresses.py  test_assonance_pytest.py  test_build_only_all_stresses_pytest.py  test_check_if_word_stressed.py  test_concat_tables_pytest.py  test_dictionary.py  test_dictionary_processing.py  test_explore_rymes.py  test_fetch_stressed_word.py  test_index_stressed_v.py  test_intagration_multiprocessing.py  test_integration_pytest.py  test_intipa.py  test_intipa_words.py  test_ipa_processing.py  test_ipa_types.py  test_mysql_connector.py  test_near_stressed_v.py  test_nn_usage.py  test_pad_pytest.py  test_pattern.py  test_pattern_pytest.py  test_pattern_score.py  test_patterns.py  test_range_rhymes_pytest.py  test_reduce_table_pytest.py  test_reverse_pytest.py  test_rhyme.py  test_rhyme_only_words_nn.py  test_rhymeflow.py  test_score.py  test_score_pytest.py  test_sounds_statistics.py  test_split_intipa_words_pytest.py  test_stressed_vowel.py  (+6 more)
(+163 files in other folders)
